--- a/src/app/pages/quiz-results/persona/persona.html
+++ b/src/app/pages/quiz-results/persona/persona.html
@@ -3,8 +3,9 @@
     <h2>{model.headline}</h2>
     <div class="description">{model.description}</div>
     <div class="partner-table">
-        <div each="logo in model.logos" class="partner-logo">
-            <img src="{logo}" alt="[need alt]">
+        <div each="partner in model.partners" class="partner-logo">
+            <img src="{partner.logo}" alt="{partner.name}">
         </div>
+        <div each="_ in model.filler" class="filler"></div>
     </div>
 </template>
