--- a/src/app/pages/errata-form/form/form.scss
+++ b/src/app/pages/errata-form/form/form.scss
@@ -5,6 +5,10 @@
     margin-bottom: 18rem;
     padding: 0 1.5rem;
 
+    .hide-errors .invalid-message {
+        display: none;
+    }
+
     > div {
         background-color: ui-color(white);
         padding: 2rem 9rem;
@@ -86,9 +90,12 @@
         grid-template-columns: auto auto 1fr;
     }
 
-    .clear-file1,
-    .clear-file2 {
-        cursor: pointer;
+    .clear-file {
+        appearance: none;
+        background-color: inherit;
+        color: inherit;
+        justify-self: left;
+
     }
 
     .btn {
