Return to instructor resources
add nudge box when returning

--- a/src/app/pages/details/instructor-resource-tab/partners/partners.html
+++ b/src/app/pages/details/instructor-resource-tab/partners/partners.html
@@ -1,4 +1,5 @@
 <template args="model">
+    <div class="callout"></div>
     <div class="title-bar">
         {model.title}
         <a class="filter-for-book" href="/partners">{model.seeMoreText}</a>
