--- a/src/app/pages/details/instructor-resource-tab/partners/partners.scss
+++ b/src/app/pages/details/instructor-resource-tab/partners/partners.scss
@@ -9,7 +9,7 @@
     grid-column: 2;
     grid-template-rows: min-content min-content;
     height: min-content;
-    overflow: hidden;
+    position: relative;
 
     .title-bar {
         @include set-font(h4);
@@ -21,6 +21,25 @@
         a {
             @include set-font(body-regular);
             color: inherit;
+        }
+    }
+
+    .callout .triangle-attachment {
+        position: absolute;
+        top: 0;
+        transform: translateY(calc(-100% - 1.5rem));
+
+        &::before {
+            display: none;
+        }
+
+        &::after {
+            @include triangle(
+                $direction: bottom,
+                $position: bottom -1rem left 50%,
+                $color: #f5f5f5,
+                $size: 0.7rem
+            );
         }
     }
 
