Make Partner lightbox links editable
Issue #1693

--- a/src/app/pages/partners/partner-details/partner-details.html
+++ b/src/app/pages/partners/partner-details/partner-details.html
@@ -10,7 +10,7 @@
         </div>
         <div class="headline">{model.headline}</div>
         <a if="model.partnerUrl" class="partner-website" href="{model.partnerUrl}">
-            Read more <i class="fas fa-external-link-alt"></i>
+            {model.partnerLinkText}<i class="fas fa-external-link-alt"></i>
         </a>
     </section>
     <div class="scrolling-region">
