Errata source UX fixes
Issue #899
Set width to 100%
Change label
Change checkbox to yes/no radios
Add expand/collapse indicators to options
Hide 2nd button when both are empty

--- a/src/app/pages/errata-form/form/ErrorLocationSelector/ErrorLocationSelector.scss
+++ b/src/app/pages/errata-form/form/ErrorLocationSelector/ErrorLocationSelector.scss
@@ -1,6 +1,9 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .errata-form.page {
+    .horizontal-group {
+        display: flex;
+    }
     select {
         @include set-font(body-regular);
         display: initial;
