--- a/src/app/pages/partners/partners.html
+++ b/src/app/pages/partners/partners.html
@@ -1,8 +1,12 @@
 <template args="model">
     <section if="model.confirmation" class="above-the-banner">
         <div class="content">
-            Thank you! Your form has been submitted. Check out some of the resources
-            available for our books below.
+            <div>
+                Thank you! Your form has been submitted. Check out some of the resources
+                available for our books below<span if="model.bookSlug">{' '}or return to
+                    <a href="{`/details/${model.bookSlug}`}">your book</a>
+                </span>.
+            </div>
             <button type="button" class="put-away"><i class="fa fa-times"></i></button>
         </div>
     </section>
