Update examples to React

--- a/src/app/components/a-component-template/a-component-template.scss
+++ b/src/app/components/a-component-template/a-component-template.scss
@@ -1,7 +1,7 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.a-component-template {
-    h1 {
-        color: os-color(red);
+.a-page-template {
+    h2 {
+        color: os-color(green);
     }
 }
