--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -282,6 +282,7 @@ $gradient-sequence: ui-color(white), ui-color(white) 50%, transparent;
         margin: 0;
         padding: 0;
         padding-left: 2rem;
+        padding-right: 0.5rem;
 
         > li {
             font-weight: bold;
