--- a/src/app/pages/details/instructor-resource-tab/featured-resources/featured-resources.scss
+++ b/src/app/pages/details/instructor-resource-tab/featured-resources/featured-resources.scss
@@ -21,17 +21,22 @@
         .resources {
             display: grid;
             grid-gap: $normal-margin;
-            grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
             justify-items: center;
             margin: 0;
             width: 100%;
 
             .resource-box {
-                border: thin solid ui-color(form-border);
+                border-bottom: 0.5rem solid os-color(yellow);
                 border-radius: 0.3rem;
-                box-shadow: none;
                 padding: 2rem;
                 width: 100%;
+
+                .description {
+                    @include body-font(1.4rem);
+
+                    color: text-color(helper);
+                }
             }
         }
     }
