--- a/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.html
+++ b/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.html
@@ -6,7 +6,7 @@
         </div>
         <div>
             <div class="featured-resources" skip="true"></div>
-            <div class="divider">
+            <div if="model.showDivider" class="divider">
                 <div class="line"></div>
                 see additional resources below
                 <div class="line"></div>
