--- a/src/app/pages/details/phone-view/instructor-resources-pane/instructor-resources-pane.html
+++ b/src/app/pages/details/phone-view/instructor-resources-pane/instructor-resources-pane.html
@@ -1,8 +1,12 @@
 <template args="model">
+    <div class="featured-resources" skip="true"></div>
+    <div class="divider">
+        <div class="line"></div>
+        see additional resources below
+        <div class="line"></div>
+    </div>
     <a class="card filter-for-book">
         OpenStax Partners <i class="fas fa-sign-out-alt"></i>
     </a>
-    <div class="swipe-zone">
-        <div class="free-resources-region" skip="true"></div>
-    </div>
+    <div class="free-resources-region" skip="true"></div>
 </template>
